added workplace, refactored filters code

--- a/src/app/components/general/contentbox/contentbox.component.scss
+++ b/src/app/components/general/contentbox/contentbox.component.scss
@@ -97,6 +97,8 @@
         }
         & .belowbottom {
             grid-area: belowbottom;
+            background-color:transparent;
+            border-top:none;
         }
     }
 }
