--- a/src/app/components/general/sort/sort.component.scss
+++ b/src/app/components/general/sort/sort.component.scss
@@ -13,7 +13,7 @@
             }
         }
         & select {
-            @include slimpill;
+            @include pill;
             & option {
                 @include link;
             }
