--- a/src/app/components/general/image/image.component.scss
+++ b/src/app/components/general/image/image.component.scss
@@ -7,6 +7,7 @@
     //border-radius: $elem-border-radius;
     overflow: hidden;
     position: relative;
+    height:100%;
     & .img-bg {
         overflow: hidden;
         position: absolute;
