--- a/src/app/components/general/tooltip/tooltip.component.scss
+++ b/src/app/components/general/tooltip/tooltip.component.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     position: relative;
+    display:block;
     & .tooltip {
         background-color: $light2;
         z-index: $above-top;
