dingdong i fixed some stuff i fucked some stuff up

--- a/src/app/components/general/contentbox/contentbox.component.scss
+++ b/src/app/components/general/contentbox/contentbox.component.scss
@@ -90,6 +90,7 @@
         }
         & .desc {
             grid-area: desc;
+            padding: $box-padding;
         }
         & .bottom {
             grid-area: bottom;
