--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -1,31 +1,26 @@
 <h1>Home</h1>
-<app-contentbox
-  [image]="me.image"
-  title="Welcome"
-  description="Hallihallo. Ich heisse {{ me.firstname }} {{
-    me.lastname
-  }} und bin {{ me.birthdate | age }} alt"
->
-  <app-button
-    [onClick]="myGithub"
-    [type]="lt.GITHUB"
-    name="Mein Github Profil"
-  ></app-button>
-  <app-button
-    [onClick]="myLink"
-    [type]="lt.URL"
-    name="Meine Webseite"
-  ></app-button>
-  <app-button
-    [onClick]="callMe"
-    [type]="lt.PHONE"
-    name="Meine Telefonnummer"
-  ></app-button>
-  <app-button
-    [onClick]="mailMe"
-    [type]="lt.MAIL"
-    name="Meine E-Mail"
-  ></app-button>
-</app-contentbox>
+<div class="welcome">
+  <div class="photo">
+    <app-image [image]="me.image"></app-image>
+  </div>
+  <div class="desc">
+    <h3>Hallihallo!</h3>
+    <p>Herzlich willkommen auf meiner Portfolio-Webseite! Fragst du dich gerade:</p>
+    <h4>Wer ich bin?</h4>
+    <p>Ich heisse {{ me.firstname }} {{ me.lastname}} und bin <span class="age">{{ me.birthdate | age:age }}</span> alt.
+    </p>
+    <h4>Was ich tue?</h4>
+    <p>Als leidenschaftlicher Problemlöser und kreativer Geist habe ich mir zum Ziel gesetzt, innovative Lösungen zu
+      realisieren und durch meine Arbeit einen positiven Einfluss zu hinterlassen. Sei es durch das Entwickeln von
+      Applikationen mit Mehrwert, Wissensvermittlung an die kommenden Generationen oder das Kreieren von Kunstwerken,
+      die die Menschen erreichen und erfreuen sollen.</p>
+  </div>
+  <div class="socials">
+    <h4 class="socialstext">Erreichen kannst du mich hier:</h4>
+    <app-button [onClick]="callMe" [type]="lt.PHONE" name="Meine Telefonnummer"></app-button>
+    <app-button [onClick]="mailMe" [type]="lt.MAIL" name="Meine E-Mail"></app-button>
+    <app-button [onClick]="myGithub" [type]="lt.GITHUB" name="Mein Github Profil"></app-button>
+  </div>
+</div>
 <!-- app-skills-percent-list -->
 <app-skills-percent name="Meine Skills" [skills]="skills"></app-skills-percent>
